--- a/client/index.html
+++ b/client/index.html
@@ -1,37 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/client/src/styles/jass.css" />
   <title>Weather Dashboard</title>
 </head>
-
 <body>
   <header class="container-fluid text-center text-white bg-dark p-1 weather-header">
     <h1>Weather Dashboard</h1>
   </header>
 
-  <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
       <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
+        <h2 id="form-heading" class="mt-1 h3 form-label">Search for a City:</h2>
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="San Diego"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
+              <input class="form-input weather-search" type="text" id="search-input" placeholder="San Diego" required />
               <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
+                <button type="submit" class="btn search-button" id="search-button">Search</button>
               </div>
             </div>
           </div>
@@ -40,24 +29,21 @@
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section class="mt-3" role="region" aria-live="polite">
+        <section class="mt-3">
           <div class="card">
             <div class="card-body" id="today">
-              <h2 class="card-title" id="search-title">
-                Search for a city!
-                <img id="weather-img" class="weather-img">
-              </h2>
+              <h2 class="card-title" id="search-title">Search for a city!</h2>
               <p class="card-text" id="temp">Temperature: °F</p>
               <p class="card-text" id="wind">Wind: MPH</p>
               <p class="card-text" id="humidity">Humidity: %</p>
             </div>
           </div>
         </section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <section id="forecast" class="row mt-3"></section>
       </div>
     </div>
   </div>
+
   <script type="module" src="/src/main.ts"></script>
 </body>
-
 </html>
