--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/client/src/styles/jass.css" />
+  <link rel="stylesheet" href="/src/styles/jass.css" />
   <title>Weather Dashboard</title>
 </head>
 <body>
   <header class="container-fluid text-center text-white bg-dark p-1 weather-header">
-    <h1>Weather Dashboard</h1>
+    <h1>Weather System</h1>
   </header>
 
   <div class="container-fluid" style="max-width: 1400px">
@@ -33,6 +33,7 @@
           <div class="card">
             <div class="card-body" id="today">
               <h2 class="card-title" id="search-title">Search for a city!</h2>
+              <img id="weather-img" class="weather-img" alt="" />
               <p class="card-text" id="temp">Temperature: °F</p>
               <p class="card-text" id="wind">Wind: MPH</p>
               <p class="card-text" id="humidity">Humidity: %</p>
